# Sklad-SSO

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  init-schemas-db.sh  pyproject.toml
app/: settings.py  urls.py
sso/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
sso/migrations/: 0001_initial.py
